--- a/css/main.css
+++ b/css/main.css
@@ -65,14 +65,8 @@ nav{
     cursor: pointer;
     float: left;
 }
-.iconicfill-moon-fill:before{
-    font-family: 'iconicfill',sans-serif;
-}
 #howtoplay{
     color:white;
-}
-.entypo-help:before {
-    font-family: 'entypo', sans-serif;
 }
 #helpNight{
     float:right;
@@ -80,3 +74,23 @@ nav{
     padding-top: 0.1%;
     padding-bottom: 0.1%;
 }
+.flyingNumber{
+    font-weight: bolder;
+    font-size: 200%;
+    opacity:0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-weight: bolder;
+    font-size: 200%;
+    animation: animationFrames ease-in 2s;
+    animation-iteration-count: 1;
+}
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
