Added Upgrades,Upgraded Style of Upgrademenu

--- a/css/day.css
+++ b/css/day.css
@@ -13,8 +13,13 @@
 #leftNav{
     color:white;
 }
+
 @keyframes animationFrames
 {
     0% {top:50%; opacity:1;}  /* start 20 pixels down  and vissable */
     100% {top:5%; opacity:0; } /* move up to 217 pixels while fading out */
+}
+#upgradeHeader{
+    background-color: rgba(227,226,226,1);;
+    color:white;
 }
