--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@
     height: 100%;
     width: 11.5%;
     float: left;
+    cursor: pointer;
 }
 .upgradeImages{
     width: 70%;
@@ -78,13 +79,8 @@ nav{
 }
 .flyingNumber{
     font-weight: bolder;
-    font-size: 200%;
+    font-size: 150%;
     opacity:0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    font-weight: bolder;
-    font-size: 200%;
     animation: animationFrames ease-in 2s;
     animation-iteration-count: 1;
 }
@@ -121,4 +117,7 @@ span.tooltip:hover:after, a:hover:before {
     text-align: center;
     padding: 0.2%;
     width: 11.1%;
+}
+.upgradeMechanic{
+    display:none;
 }
