--- a/css/nightmode.css
+++ b/css/nightmode.css
@@ -27,6 +27,6 @@ body{
 
 @keyframes animationFrames
 {
-    0% {top:50%; opacity:1;}  /* start 20 pixels down  and vissable */
+    0% {opacity:0.8;}  /* start 20 pixels down  and vissable */
     100% {top:5%; opacity:0; display:none} /* move up to 217 pixels while fading out */
 }
