--- a/css/main.css
+++ b/css/main.css
@@ -55,8 +55,9 @@ nav{
 }
 #clickPicture{
     transition: transform 0.1s;
-    width: 99%;
-    height: 99%;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
 }
 #clickPicture:hover{
     transform: scale(1.1);
@@ -98,26 +99,100 @@ nav{
 .upgradePrice{
     display:none;
 }
-span.tooltip {
-    position: relative;
-    text-decoration: none;
-}
-
-span.tooltip:hover:after {
-    bottom: 100%;
-}
-span.tooltip:hover:before {
-    bottom: 70%;
-}
-span.tooltip:hover:after, a:hover:before {
-    opacity: 1;
-}
-#upgradeHeader{
-    cursor: pointer;
-    text-align: center;
-    padding: 0.2%;
-    width: 11.1%;
-}
 .upgradeMechanic{
     display:none;
+}
+#statsPage{
+    opacity:0.9;
+    top: 10%;
+    left:10%;
+    position: absolute;
+    height: 80%;
+    width: 80%;
+    border:2px solid black;
+
+}
+#statsShow{
+    cursor: pointer;
+}
+.invisible{
+    display:none;
+}
+.stat{
+    opacity: 1;
+    display: block;
+}
+#statisticsHeader{
+    text-align: center;
+    left: 40%;
+    top: 5%;
+    position: absolute;
+}
+#statisticsList{
+    margin-left:2%;
+    margin-top:10%;
+    list-style-type: none;
+}
+#bottomBar{
+    height: 5%;
+    cursor: pointer;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+}
+#pagesList{
+    margin-top:0.5%;
+}
+#shopPage{
+    opacity:0.9;
+    top: 10%;
+    left:10%;
+    position: absolute;
+    height: 80%;
+    width: 80%;
+    border:2px solid black;
+}
+#shopHeader{
+    text-align: center;
+    left: 40%;
+    top: 5%;
+    position: absolute;
+}
+#videocardsShop{
+    position: absolute;
+    top:30%;
+    left:10%;
+}
+#upgradesShop{
+    position: absolute;
+    top: 30%;
+    left: 40%;
+    width:25%;
+}
+#overclockShop{
+    position: absolute;
+    top:30%;
+    left:70%;
+}
+.shopHeaders{
+    border-bottom: 1px solid black;
+    text-align: center;
+    padding: 1%;
+}
+.shop{
+    width:20%;
+    height: 60%;
+    border:1px solid black;
+}
+.shopContent{
+    overflow:auto;
+}
+.shopItem{
+    border-bottom: 1px solid black;
+    margin-right: 0.5%;
+    display: block;
+    cursor:pointer;
+    width:100%;
 }
