--- a/css/day.css
+++ b/css/day.css
@@ -13,26 +13,18 @@
 #leftNav{
     color:white;
 }
-#statsPage{
-    background-color:whitesmoke;
-}
-
 @keyframes animationFrames
 {
     0% {opacity:0.8;}  /* start 20 pixels down  and vissable */
     100% {top:5%; opacity:0; } /* move up to 217 pixels while fading out */
 }
-#upgradeHeader{
-    background-color: rgba(227,226,226,1);;
-    color:white;
-}
 #bottomBar{
     background-color: rgba(227,226,226,1);
     color:white;
 }
-#shopPage{
-    background-color:whitesmoke;
-}
 .lootScreen{
+    background-color: whitesmoke;
+}
+.page{
     background-color: whitesmoke;
 }
