--- a/css/main_mobile.css
+++ b/css/main_mobile.css
@@ -188,7 +188,6 @@ nav {
 .shopItem {
     border-bottom: 1px solid black;
     margin-right: 0.5%;
-    display: block;
     cursor: pointer;
     width: 100%;
 }
@@ -301,4 +300,21 @@ nav {
     width: 100%;
     height: 30px;
     background-color: green;
+}
+
+#buyModes{
+    position: absolute;
+    top:5%;
+    left:2%;
+    list-style-type:none;
+}
+.buyMode{
+    font-weight: bold;
+}
+
+.bought{
+
+}
+.videocard{
+
 }
