--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 #clickCenter {
     position: fixed;
     top: 50%;
-    left: 50%;
+    left: 48%;
     transform: translate(-75%, -50%);
 }
 
@@ -49,7 +49,6 @@ li {
 
 header {
     height: 20%;
-    background-color: rgba(227, 226, 226, 1);
 }
 
 #logo {
@@ -60,15 +59,15 @@ header {
 
 nav {
     float: right;
-    margin-right: 40%;
+    margin-right: 38%;
     margin-top: 0.8%;
     color: white;
 }
 
 #clickPicture {
     transition: transform 0.1s;
-    width: 125%;
-    height: 125%;
+    width: 140%;
+    height: 140%;
     cursor: pointer;
 }
 
@@ -156,6 +155,7 @@ nav {
 
 #pagesList {
     margin-top: 0.5%;
+    margin-right: 5%;
 }
 
 #videocardsShop {
@@ -196,6 +196,7 @@ nav {
 
 .shopItem {
     border-bottom: 1px solid black;
+    margin-top: 1%;
     margin-right: 0.5%;
     cursor: pointer;
     width: 100%;
