--- a/css/main_mobile.css
+++ b/css/main_mobile.css
@@ -4,6 +4,11 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #clickCenter {
