--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,14 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-user-drag: none;
+    user-drag: none;
+
 }
 
 #clickCenter {
@@ -93,7 +101,7 @@ nav {
     margin-right: 2%;
     padding-top: 0.1%;
     padding-bottom: 0.1%;
-    color:white;
+    color: white;
 }
 
 .flyingNumber {
@@ -102,14 +110,6 @@ nav {
     opacity: 0;
     animation: animationFrames ease-in 2s;
     animation-iteration-count: 1;
-}
-
-.noselect {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
 }
 
 #audioplayer {
@@ -161,13 +161,14 @@ nav {
 #videocardsShop {
     position: absolute;
     top: 30%;
-    left: 10%;
+    left: 5%;
+    width: 21%;
 }
 
 #upgradesShop {
     position: absolute;
     top: 30%;
-    left: 40%;
+    left: 37%;
     width: 23%;
 }
 
@@ -188,18 +189,24 @@ nav {
     width: 20%;
     height: 60%;
     border: 1px solid black;
+    overflow: auto;
+    overflow-x: hidden;
 }
 
 .shopContent {
     overflow: auto;
+    overflow-x: hidden;
 }
 
 .shopItem {
     border-bottom: 1px solid black;
-    margin-top: 1%;
     margin-right: 0.5%;
     cursor: pointer;
     width: 100%;
+}
+
+.shopItem:hover {
+    background-color: rgba(0, 0, 0, 0.25);
 }
 
 #coinHealth {
@@ -223,7 +230,7 @@ nav {
 
 .pageHeader {
     text-align: center;
-    left: 40%;
+    left: 43%;
     top: 5%;
     position: absolute;
 }
@@ -300,16 +307,21 @@ nav {
     height: 20%;
     font-weight: bolder;
 }
-#myProgress{
-    margin-left:50%;
-    margin-top:5%;
-}
-#closeMobileMessage{
+
+#myProgress {
+    left: 56%;
+    top: 105%;
     position: absolute;
-    top:3%;
-    left:95%;
     font-weight: bold;
-    color:white;
+    font-size: 150%;
+}
+
+#closeMobileMessage {
+    position: absolute;
+    top: 3%;
+    left: 95%;
+    font-weight: bold;
+    color: white;
     cursor: pointer;
     font-size: 105%;
 }
@@ -331,28 +343,41 @@ nav {
     position: absolute;
 }
 
-#closeMicrosoftMessage{
+#closeMicrosoftMessage {
     position: absolute;
-    top:3%;
-    left:95%;
+    top: 3%;
+    left: 95%;
     font-weight: bold;
-    color:white;
+    color: white;
     cursor: pointer;
     font-size: 105%;
 }
-#buyModes{
+
+#buyModes {
     position: absolute;
-    top:95%;
-    left:2%;
-    list-style-type:none;
+    top: 93%;
+    left: 2%;
+    list-style-type: none;
     cursor: pointer;
 }
-.buyMode{
-    font-weight: bold;
+
+#amountShopModes {
+    position: absolute;
+    top: 96%;
+    left: 2%;
+    list-style-type: none;
+    cursor: pointer;
 }
-.bought{
+
+.buyMode {
+    font-weight: bold;
+    font-size: 105%;
+}
+
+.bought {
 
 }
-.videocard{
+
+.videocard {
 
 }
