--- a/css/main.css
+++ b/css/main.css
@@ -382,6 +382,50 @@ nav {
 .videocard {
 
 }
+#itemShowCase{
+    height: 20%;
+    width: 30%;
+    left:13%;
+    top:12%;
+    position: absolute;
+    border: 1.5px solid black;
+    box-shadow: 10px 10px 10px black;
+}
+#itemImage{
+    left:5%;
+    top:25%;
+    position: absolute;
+    height: 25%;
+    width: 25%;
+}
+#itemText{
+    left:5%;
+    top: 70%;
+    position: absolute;
+}
+#closeP{
+    left:93%;
+    top: 4%;
+    position: absolute;
+    cursor: pointer;
+}
+#itemName{
+    left:35%;
+    top: 5%;
+    position: absolute;
+}
+#changeList{
+    left:5%;
+    top:15%;
+    position: absolute;
+    height: 80%;
+    width: 90%;
+    list-style-type: none;
+    overflow: hidden;
+}
+
+
+
 
 
 
