--- a/css/nightmode_mobile.css
+++ b/css/nightmode_mobile.css
@@ -29,6 +29,6 @@ body{
     background-color:#576f75;
     color:#e5e8e3;
 }
-.tooltip{
-    background-color:#576f75;
+#itemShowCase{
+    background-color: #576f75;
 }
