--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
     position: fixed;
     top: 50%;
     left: 48%;
-    transform: translate(-75%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 .affordable {
@@ -49,6 +49,7 @@ ul {
 
 li {
     display: inline;
+    cursor: pointer;
 }
 
 #volume {
@@ -77,7 +78,6 @@ nav {
     width: 140%;
     height: 140%;
     cursor: pointer;
-
 }
 
 #clickPicture:hover {
@@ -145,18 +145,25 @@ nav {
 }
 
 #bottomBar {
+    width: 100%;
     height: 5%;
-    cursor: pointer;
     position: absolute;
     right: 0;
     bottom: 0;
-    left: 0;
-    text-align: center;
 }
 
 #pagesList {
     margin-top: 0.5%;
-    margin-right: 5%;
+    width: 100%;
+    text-align: center;
+}
+
+#pagesList li {
+    font-size: 20px;
+}
+
+.handPointer {
+    cursor: pointer;
 }
 
 #videocardsShop {
@@ -313,11 +320,9 @@ nav {
 }
 
 #myProgress {
-    left: 56%;
-    top: 105%;
-    position: absolute;
+    margin-top: 20px;
+    text-align: center;
     font-weight: bold;
-    font-size: 150%;
 }
 
 #closeMobileMessage {
