--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,8 @@ nav {
     color: white;
 }
 
+
+
 #clickPicture {
     transition: transform 0.1s;
     width: 140%;
@@ -147,19 +149,20 @@ nav {
 #bottomBar {
     width: 100%;
     height: 5%;
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 0;
 }
 
 #pagesList {
-    margin-top: 0.5%;
+    margin-top: 0.8%;
     width: 100%;
     text-align: center;
 }
 
 #pagesList li {
-    font-size: 20px;
+    margin-right: 5px;
+    font-size-adjust: inherit;
 }
 
 .handPointer {
