a new way to overclock update
- added new gpus
-add changed the about page
- added extreme overclocking
- change the way to load items
- added new dropimages

--- a/css/day.css
+++ b/css/day.css
@@ -3,7 +3,6 @@
 body {
     color: black;
 }
-
 .upgradeFields {
     border: 1px solid black;
 }
@@ -49,4 +48,10 @@ header{
 }
 #itemShowCase{
     background-color: whitesmoke;
+}
+#xoverclockInfo{
+    background-color: whitesmoke;
+}
+.menuToggler{
+    background-color: rgba(140, 140, 140, 1);
 }
