--- a/css/day_mobile.css
+++ b/css/day_mobile.css
@@ -24,3 +24,9 @@
 #itemShowCase{
     background-color: whitesmoke;
 }
+#xoverclockInfo{
+    background-color: whitesmoke;
+}
+.menuToggler{
+    background-color: rgba(140, 140, 140, 1);
+}
