--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,14 @@ ul {
     margin: 0;
     padding: 0;
 }
-
+a{
+    text-decoration: none;
+    color:inherit;
+}
+a:hover{
+    color: red;
+    text-decoration: underline;
+}
 li {
     display: inline;
     cursor: pointer;
@@ -140,7 +147,7 @@ nav {
 
 #statisticsList {
     margin-left: 2%;
-    margin-top: 10%;
+    margin-top: 5%;
     list-style-type: none;
 }
 
@@ -171,40 +178,41 @@ nav {
     position: absolute;
     top: 30%;
     left: 5%;
-    width: 21%;
 }
 
 #upgradesShop {
     position: absolute;
     top: 30%;
-    left: 37%;
-    width: 23%;
+    left: 37.5%;
 }
 
 #overclockShop {
     position: absolute;
     top: 30%;
     left: 70%;
-    width: 25%;
+    width: 26%;
 }
 
 .shopHeaders {
     border-bottom: 1px solid black;
-    text-align: center;
     padding: 1%;
+    text-align: center;
+    height: auto;
+    width:auto;
 }
 
 .shop {
-    width: 20%;
+    width: 25%;
     height: 60%;
     border: 1px solid black;
-    overflow: auto;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .shopContent {
-    overflow: auto;
-    overflow-x: hidden;
+    overflow: hidden;
+    height:94%;
+    position: absolute;
+
 }
 
 .shopItem {
@@ -239,15 +247,13 @@ nav {
 }
 
 .pageHeader {
+    margin-top: 2%;
     text-align: center;
-    left: 43%;
-    top: 5%;
-    position: absolute;
 }
 
 #settingsList {
     margin-left: 2%;
-    margin-top: 10%;
+    margin-top: 5%;
     list-style-type: none;
 }
 
@@ -410,7 +416,7 @@ nav {
 }
 #itemText{
     left:5%;
-    top: 70%;
+    top: 60%;
     position: absolute;
 }
 #closeP{
@@ -445,10 +451,62 @@ nav {
     height: 30px;
     background-color: green;
 }
+.shopCardImage{
+    width:8%;
+    height:8%;
+    float:left;
+    margin-top:7px;
+}
+#xoverclockInfo{
+    left:0;
+    top:30%;
+    position: absolute;
+    width:10%;
+    height: 10%;
+    border: 1px solid black;
+    border-left: 0 solid white;
+}
+#healthProgesss{
+    top:80%;
+    left:5%;
+    position: absolute;
+    width:80%;
+    background: grey;
 
-
-
-
-
-
+}
+#healthBar{
+    width: 100%;
+    height: 5px;
+    background-color: green;
+}
+#xoverclockImage{
+    left:25%;
+    top:10%;
+    position: absolute;
+    height: 50%;
+    width: 50%;
+}
+#pointList{
+    margin-top: 10%;
+}
+#pointList ul{
+    margin-left: 5px;
+}
+#pointList li{
+    display: block;
+}
+.menuToggler{
+    width:100%;
+    height: 30px;
+}
+#opensourceList li{
+   display: block;
+}
+.headerMenuTitle{
+    text-align: center;
+    padding: 5px;
+}
+#description{
+    margin: 5px;
+}
 
