--- a/css/main.css
+++ b/css/main.css
@@ -513,5 +513,18 @@ nav {
 #aboutPage{
     overflow:auto;
 }
-
+.flyingCoin {
+    animation: coinFrames ease-in 2s;
+    animation-iteration-count: 1;
+    opacity: 0;
+}
+@keyframes animationFrames {
+    0% {
+        opacity: 0.8;
+    }
+    100% {
+        top: 5%;
+        opacity: 0;
+    }
+}
 
